
    }

    \item \code{plot_GrowthCurve()}
      \itemize{

        \item If the input data contain a least one infinite value the function will not crash
        any longer, but return \code{NULL} (#263, Norbert Mercier),
        \item check for insufficient values in the data set and return \code{NULL} (before the function crashed),
        \item data frame also exports now error of the D0-values based on the MC runs for the De error.

      }

    \item \code{plot_Histogram()}
      \itemize{

        \item New argument \code{interactive} to produce an interactive plot
        using the JavaScript graphing library 'plotly.js' (requires the
        'plotly' package).

      }


             \item \code{plot_RLum.Analysis()}
      \itemize{

        \item All \code{...} arguments can now be provided as \code{vector} or \code{list} to
        gain more control of the plot appearance,
        \item argument \code{abline} now works also in combination with \code{combine = TRUE} and
        allows to set ablines independently over different plots (#260),
        \item automatic axes labelling improved for \code{combine = TRUE},
        \item support further \code{...} argument \code{legend} (TRUE/FALSE),
        \item add support for argument \code{smooth} for \code{RLum.Data.Curve} objects (see
        entry for \code{plot_RLum.Data.Curve},
        \item fix minor bug introduced for the acceptence of the argument \code{lty}.
      }

         \item \code{plot_RLum.Data.Curve()}
      \itemize{
        \item Fix seldom bug that causes unexpected function behaviour if \code{xlab} or \code{ylab}
        exist as objects on the global environment (#265),
        \item add argument \code{smooth} to provide an automatic curve smoothing for plotting based
        on a running mean.

      }

            \item \code{plot_RLum.Data.Spectrum()}
      \itemize{
        \item Added \code{matrix} as allowed input,